Added an extra column in the mark database table & added api responses for the plots,currently fixing the plots(has bugs when integrating it with angular js

--- a/dashboard/pages/more-info.html
+++ b/dashboard/pages/more-info.html
@@ -15,12 +15,16 @@
     <div class="col pr-0">
         <div class="card ml-2 mr-1 stretch-card-top">
             <div class="card-body">
+                <h5>{{student}}</h5>
+                <div id="student_info" class="jumbotron"></div>
             </div>
         </div>
     </div>
     <div class="col pl-0">
         <div class="card mr-2 ml-1 stretch-card-top">
             <div class="card-body">
+                <h5>{{courses}}</h5>
+                <div id="student_courses" class="jumbotron"></div>
             </div>
         </div>
     </div>
@@ -29,12 +33,16 @@
     <div class="col pr-0">
         <div class="card ml-2 mr-1 stretch-card-bottom">
             <div class="card-body">
+                <h5>{{average}}</h5>
+                <div id="student_average" class="jumbotron"></div>
             </div>
         </div>
     </div>
     <div class="col pl-0">
         <div class="card mr-2 ml-1 stretch-card-bottom">
             <div class="card-body">
+                <h5>{{risk}}</h5>
+                <div id="student_risk" class="jumbotron"></div>
             </div>
         </div>
     </div>
