--- a/dashboard/pages/home.html
+++ b/dashboard/pages/home.html
@@ -13,6 +13,11 @@
     <div id="navbarNav" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
+                <a class="nav-link" href="pages/report.php">
+                    <button type="button" class="btn btn-primary">Generate Report</button>
+                </a>
+            </li>
+            <li class="nav-item active">
                 <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
