more-info plots

--- a/dashboard/pages/more-info.html
+++ b/dashboard/pages/more-info.html
@@ -16,7 +16,7 @@
         <div class="card ml-2 mr-1 stretch-card-top">
             <div class="card-body">
                 <h5>{{student}}</h5>
-                <div id="student_info" class="jumbotron"></div>
+                <div id="student_info" class="ct-chart container"></div>
             </div>
         </div>
     </div>
@@ -24,7 +24,11 @@
         <div class="card mr-2 ml-1 stretch-card-top">
             <div class="card-body">
                 <h5>{{courses}}</h5>
-                <div id="student_courses" class="jumbotron"></div>
+                <div id="student_courses" class="ct-chart container"></div>
+                <div class="container">
+                    <ul class="list-group" id="course_list">
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -34,7 +38,7 @@
         <div class="card ml-2 mr-1 stretch-card-bottom">
             <div class="card-body">
                 <h5>{{average}}</h5>
-                <div id="student_average" class="jumbotron"></div>
+                <div id="student_average" class="ct-chart ct-golden-section container" style="ct-series-a .ct-slice-pie {fill: #02d750;}"></div>
             </div>
         </div>
     </div>
@@ -42,7 +46,7 @@
         <div class="card mr-2 ml-1 stretch-card-bottom">
             <div class="card-body">
                 <h5>{{risk}}</h5>
-                <div id="student_risk" class="jumbotron"></div>
+                <div id="student_risk" class="ct-chart container"></div>
             </div>
         </div>
     </div>
