--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/pe-icon-7-stroke.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
+    <link rel="stylesheet" type="text/css" href="css/chartist.min.css">
+    <!-- google charts-->
+    <script src="js/chartist.min.js"></script>
     <!-- angular -->
     <script src="js/angular.min.js"></script>
     <script src="js/angular-route.min.js"></script>
@@ -54,6 +56,9 @@
                 </li>
                 <!-- grade book -->
                 <li>
+                    <a href="./pages/reportPage.php" style="text-decoration: none; cursor: pointer;"><i class="pe-7s-power"></i>Report</a>
+                </li>
+                <li>
                     <a id="logout-button" style="text-decoration: none; cursor: pointer;"><i class="pe-7s-power"></i>Logout</a>
                 </li>
             </ul>
@@ -73,6 +78,5 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/popper.min.js"></script>
-    <script src="js/google.charts.js"></script>
 </body>
 </html>
