--- a/dashboard/pages/statistics.html
+++ b/dashboard/pages/statistics.html
@@ -17,12 +17,14 @@
     <div class="col pr-0">
         <div class="card ml-2 mr-1 stretch-card-top">
             <div class="card-body">
+                <h5>{{student}}</h5>
             </div>
         </div>
     </div>
     <div class="col pl-0">
         <div class="card mr-2 ml-1 stretch-card-top">
             <div class="card-body">
+                <h5>{{courses}}</h5>
             </div>
         </div>
     </div>
@@ -31,12 +33,14 @@
     <div class="col pr-0">
         <div class="card ml-2 mr-1 stretch-card-bottom">
             <div class="card-body">
+                <h5>{{average}}</h5>
             </div>
         </div>
     </div>
     <div class="col pl-0">
         <div class="card mr-2 ml-1 stretch-card-bottom">
             <div class="card-body">
+                <h5>{{risk}}</h5>
             </div>
         </div>
     </div>
