adjusted report page and chaged icon for report page to paper clip

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -54,9 +54,9 @@
                 <li id="upload-marks-tab">
                     <a href="#!/upload-marks" style="text-decoration: none; cursor: pointer;"><i class="pe-7s-cloud-upload"></i>Upload Marks</a>
                 </li>
-                <!-- grade book -->
+                <!-- report -->
                 <li>
-                    <a href="./pages/reportPage.php" style="text-decoration: none; cursor: pointer;"><i class="pe-7s-power"></i>Report</a>
+                    <a href="./pages/reportPage.php" style="text-decoration: none; cursor: pointer;"><i class="pe-7s-paperclip"></i>Report</a>
                 </li>
                 <li>
                     <a id="logout-button" style="text-decoration: none; cursor: pointer;"><i class="pe-7s-power"></i>Logout</a>
