--- a/dashboard/pages/upload-marks.html
+++ b/dashboard/pages/upload-marks.html
@@ -116,7 +116,7 @@
                             <h3 style="font-weight:100">File Preview</h3>
                         </div>
                         <div class="col p-0">
-                            <p style="text-align:right; color: lightslategray">Use comma , separated csv file</p>
+                            <p style="text-align:right; color: lightslategray"><a class="lightbox" href="../dashboard/img/csv-example.png"><img style="height: 20px;width: 20px" src="../dashboard/img/question.png"></a>Use comma , separated csv file</p>
                         </div>
                     </div>
                     <!-- text block -->
