--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="css/pe-icon-7-stroke.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/chartist.min.css">
-    <!-- google charts-->
+    <!-- chartist charts-->
     <script src="js/chartist.min.js"></script>
     <!-- angular -->
     <script src="js/angular.min.js"></script>
