--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <!--Scripts-->
     <script src="js/axios.js"></script>
     <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/functions.js"></script>
     <script src="js/index.js"></script>
