changed 'more info' button on grade book to 'personal info'

--- a/dashboard/pages/grade-book.html
+++ b/dashboard/pages/grade-book.html
@@ -75,7 +75,7 @@
                                         <td style="text-align:center">{{ x.average }}</td>
                                         <td><button ng-click="popup($event)" id="awe" class="more-info-button" onmousedown="event.preventDefault()"
                                                 type="button"style="cursor: pointer;">
-                                                    <b>MORE INFO</b>
+                                                    <b>PERSONAL INFO</b>
                                         </button></td>
                                     </tr>
                                 </tbody>
