integrated report page with angular

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -55,8 +55,8 @@
                     <a href="#!/upload-marks" style="text-decoration: none; cursor: pointer;"><i class="pe-7s-cloud-upload"></i>Upload Marks</a>
                 </li>
                 <!-- report -->
-                <li>
-                    <a href="./pages/reportPage.php" style="text-decoration: none; cursor: pointer;"><i class="pe-7s-paperclip"></i>Report</a>
+                <li id="report-tab">
+                    <a href="#!/reportPage" style="text-decoration: none; cursor: pointer;"><i class="pe-7s-paperclip"></i>Report</a>
                 </li>
                 <li>
                     <a id="logout-button" style="text-decoration: none; cursor: pointer;"><i class="pe-7s-power"></i>Logout</a>
