added admin page

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -44,7 +44,7 @@
                 </li>
                 <!-- admin -->
                 <li id="admin-tab">
-                    <a href="#" style="text-decoration:none; cursor: pointer;"><i class="pe-7s-user"></i>Admin</a>
+                    <a href="#!/admin" style="text-decoration:none; cursor: pointer;"><i class="pe-7s-user"></i>Admin</a>
                 </li>
                 <!-- grade book -->
                 <li id="grade-book-tab">
