--- a/dashboard/pages/home.html
+++ b/dashboard/pages/home.html
@@ -13,13 +13,13 @@
     <div id="navbarNav" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#!/about">About<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Team</a>
+                <a class="nav-link" href="#!/team">Team</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Wiki</a>
+                <a class="nav-link" href="#!/wiki">Wiki</a>
             </li>
         </ul>
     </div>
