--- a/dashboard/pages/home.html
+++ b/dashboard/pages/home.html
@@ -12,12 +12,12 @@
     </button>
     <div id="navbarNav" class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <!--<li class="nav-item active">
                 <a class="nav-link" href="#!/about">About<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#!/team">Team</a>
-            </li>
+            </li>-->
             <li class="nav-item">
                 <a class="nav-link" href="#!/wiki">Wiki</a>
             </li>
