risk output fixed

--- a/dashboard/pages/more-info.html
+++ b/dashboard/pages/more-info.html
@@ -46,7 +46,7 @@
         <div class="card mr-2 ml-1 stretch-card-bottom">
             <div class="card-body">
                 <h5>{{risk}}</h5>
-                <div id="student_risk" class="ct-chart container"></div>
+                <div id="student_risk"></div>
             </div>
         </div>
     </div>
