--- a/dashboard/pages/admin.html
+++ b/dashboard/pages/admin.html
@@ -25,7 +25,7 @@
                     <div class="col">
                          <div class="card" style="margin:10px">
                             <h5>Select courses that the lecturer teaches:</h5>
-                            <form>
+                            <form id="course_list">
                                     <?php
                                         $link = mysqli_connect("localhost","root","", "risk");
 
