--- a/dashboard/pages/grade-book.html
+++ b/dashboard/pages/grade-book.html
@@ -1,4 +1,7 @@
 <!-- navbar -->
+<style type="text/css">
+    body{overflow: hidden;}
+</style>
 <nav class="navbar navbar-expand-lg navbar-light">
     <!-- toggle button -->
     <!-- onmousedown="event.preventDefault()" prevents button from staying clicked -->
