--- a/dashboard/pages/more-info.html
+++ b/dashboard/pages/more-info.html
@@ -1,3 +1,6 @@
+<style type="text/css">
+    body{overflow: hidden;}
+</style>
 <!-- navbar -->
 <nav class="navbar navbar-expand-lg navbar-light">
     <!-- toggle button -->
