--- a/dashboard/pages/statistics.html
+++ b/dashboard/pages/statistics.html
@@ -59,7 +59,7 @@
                 <div class="card" style="width:20rem">
                 <div class="card-body">
                     <h5 class="card-title">{{average3}}</h5>
-                    <p class="card-text" id="courses3"></p>
+                    <p class="card-text" id="course3"></p>
                     <div id="figure3" class="ct-chart container"></div>
                 </div>
                 </div>
